# csad2025KI-408KonovalenkoVladyslav7

./: CMakeLists.txt  README.md  baud_rate_gen.vhd  ci.bat  ci.sh  main.cpp  math_operations.cpp  tb_uart_full.vhd  uart_rx.vhd  uart_tx.vhd
.github/workflows/: ci.yml
tests/: unit_tests.cpp
